// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RebuildHistory /> > should render <LoadingPlaceholder /> when unbuilt is null 1`] = `
<BoxGroup>
  <BoxGroupHeader>
    Changes
  </BoxGroupHeader>
  <LoadingPlaceholder
    margin="22px"
  />
</BoxGroup>
`;

exports[`<RebuildHistory /> > should render 1`] = `
<BoxGroup>
  <BoxGroupHeader>
    Changes
  </BoxGroupHeader>
  <styled.div>
    <RebuildHistoryItem
      description="test-description"
      key="123abc"
      otuName="test-otu"
    />
    <RebuildHistoryEllipsis
      unbuilt={
        {
          "documents": [
            {
              "description": "test-description",
              "id": "123abc",
              "otu": {
                "name": "test-otu",
              },
            },
          ],
          "page_count": 2,
          "per_page": 5,
          "total_count": 10,
        }
      }
    />
  </styled.div>
</BoxGroup>
`;

exports[`<RebuildHistoryEllipsis /> > should render when page_count greater than 1 1`] = `
<Styled(BoxGroupSection)
  key="last-item"
>
  + 
  48
   more changes
</Styled(BoxGroupSection)>
`;

exports[`<RebuildHistoryEllipsis /> > should render when page_count is 1 1`] = `""`;

exports[`<RebuildHistoryItem /> > should render with description 1`] = `
<Styled(BoxGroupSection)>
  <strong>
    Foobar Virus
  </strong>
  Removed OTU
</Styled(BoxGroupSection)>
`;

exports[`<RebuildHistoryItem /> > should render without description 1`] = `
<Styled(BoxGroupSection)>
  <strong>
    Foobar Virus
  </strong>
  No Description
</Styled(BoxGroupSection)>
`;
